...
              ? ''
              : DateFormat(DateFormat.YEAR_ABBR_MONTH_DAY)
                  .format(DateTime.parse(dob)),
        );

        return GestureDetector(
          key: const ValueKey('dob-selector'),
          onTap: () {
            showDatePicker(
              context: context,
              initialDate: dob.isEmpty
                  ? DateTime.now()
                  : DateTime.tryParse(dob) ?? DateTime.now(),
...
